fix(style): improve shadows for dark mode

--- a/src/style/shadows.scss
+++ b/src/style/shadows.scss
@@ -1,4 +1,11 @@
 :root {
+    --shadow-brighten-edges-inside: 0 -1px 0.26rem rgb(var(--color-white), 0.06)
+            inset,
+        0 0 0 1px rgb(var(--color-white), 0.06) inset;
+    --shadow-brighten-edges-outside: 0 0.125rem 0.26rem
+            rgb(var(--color-white), 0.06),
+        0 0 0 1px rgb(var(--color-white), 0.06);
+
     // Could be useful for highlighting areas or elements that are focused, using a box-shadow.
     // However, we recommend to use `var(--shadow-depth-8-focus)` to get a more coherent visual effect.
     --shadow-focused-state: 0 0 0 0.125rem var(--mdc-theme-primary);
@@ -10,20 +17,25 @@
     // Good for buttons and clickables such as select dropdowns, or slider grabbers
     --button-shadow-normal: 0 0.09375rem 0.225rem 0
             rgb(var(--color-black), 0.232),
-        0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.208);
+        0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.208),
+        var(--shadow-brighten-edges-inside);
     --button-shadow-hovered: 0 0.125rem 0.375rem rgb(var(--color-black), 0.15),
-        0 0.375rem 0.625rem rgb(var(--color-black), 0.05);
+        0 0.375rem 0.625rem rgb(var(--color-black), 0.05),
+        var(--shadow-brighten-edges-inside);
     --button-shadow-pressed: 0 0.0625rem 0.1875rem 0
             rgb(var(--color-black), 0.132),
-        0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.108);
+        0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.108),
+        var(--shadow-brighten-edges-inside);
     --button-shadow-inset: 0 0.03125rem 0.21875rem 0
             rgb(var(--color-black), 0.132) inset,
         0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.108) inset,
+        var(--shadow-brighten-edges-outside),
         0 0 0.25rem rgb(var(--color-white), 0.9);
     --button-shadow-inset-pressed: 0 0.03125rem 0.34375rem 0
             rgb(var(--color-black), 0.132) inset,
         0 0.01875rem 0.11875rem 0 rgb(var(--color-black), 0.12) inset,
-        0 0 0.1875rem rgb(var(--color-white), 0.9);
+        0 -1px 0.3rem rgb(var(--color-white), 0.9),
+        var(--shadow-brighten-edges-outside);
 
     // Good for Command bars, Command dropdowns, Context menus
     --shadow-depth-8: 0 0.2rem 0.45rem 0 rgb(var(--color-black), 0.132),
